--- a/package.json
+++ b/package.json
@@ -10,20 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emailjs/react-native": "^4.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-firebase/app": "^12.9.3",
+    "@react-native-firebase/auth": "^12.9.3",
+    "@react-native-firebase/firestore": "^12.9.3",
+    "@react-native-google-signin/google-signin": "^7.0.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@supabase/supabase-js": "^2.49.1",
     "immer": "^10.0.2",
     "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-animatable": "^1.4.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^10.0.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
