--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/react-native": "^4.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^12.9.3",
     "@react-native-firebase/auth": "^12.9.3",
     "@react-native-firebase/firestore": "^12.9.3",
