--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "^12.9.3",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
